--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -18,7 +18,10 @@ dependencies:
   record_web: ^1.0.4
   record_windows: ^1.0.2
   record_linux: '>=0.5.0 <1.0.0'
-  record_android: ^1.0.4
+  record_android:
+    git:
+      url: https://github.com/DroidsOnRoids/record.git
+      path: record_android
   record_darwin: ^1.0.1
 
 dev_dependencies:
