--- a/record/pubspec.yaml
+++ b/record/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
     git:
       url: https://github.com/DroidsOnRoids/record.git
       path: record_android
-  record_darwin: ^1.0.1
+  record_darwin:
+    git:
+      url: https://github.com/DroidsOnRoids/record.git
+      path: record_darwin
 
 dev_dependencies:
   # https://pub.dev/packages/flutter_lints
